# scribia

./: .env.example  .gitignore  .vercelignore  README.md  base.md  instalar-desktop.bat  migration-completa.sql  package-lock.json  package.json  tsconfig.base.json  turbo.json
.aiox/: config.yaml  environment-report.yaml
.aiox-core/: core-config.yaml  install-manifest.yaml  version.json
.aiox-core/data/: entity-registry.yaml
apps/desktop/: .env.example  index.html  package.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/src/audio/: capture.rs  devices.rs
apps/desktop/src-tauri/src/upload/: manager.rs
apps/web/: next.config.ts  package.json  tsconfig.json
docs/: architecture.md  design-system.md
docs/stories/: 1.1.monorepo-setup.md  1.2.database-schema.md  1.3.authentication.md  1.4.storage-setup.md  1.5.ai-provider-setup.md  2.1.tauri-app-setup.md  2.2.audio-capture.md  2.3.audio-upload.md  2.4.session-control.md  3.1.transcription-pipeline.md  3.2.summary-topics.md  3.3.ebook-generation.md  3.4.processing-monitor.md  4.1.events-crud.md  4.2.lectures-speakers-crud.md  4.3.participants-management.md  4.4.event-analytics.md  4.5.final-report.md  5.1.participant-portal.md  5.2.audio-player.md  5.3.ebook-playbook-viewer.md  5.4.lecture-detail-page.md  (+12 more)
referencias/: DESIGN-SYSTEM (1).md  scribia-dashboard.html  scribia-desktop.html  scribia-participant.html  scribia-speakers.html
supabase/: config.toml  seed.sql
(+123 files in other folders)
