[package]
name = "scribia-capture"
version = "0.1.0"
description = "ScribIA Capture — Desktop audio recording for events"
authors = ["ScribIA Team"]
edition = "2021"

[lib]
name = "scribia_capture_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.15"
hound = "3.5"
reqwest = { version = "0.12", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }

